2009-03-11  Zoltan Varga  <vargaz@gmail.com>

	* SortedList.cs: Add version checking to the Key/Value enumerators +
	implement support for Reset (). Fixes #483985.

2007-11-15  Roei Erez  <roeie@mainsoft.com>

	* Stack.cs: Performance improvement in the case where the stack is popped
	until empty. Changed the condition for resizing the array, and instead of
	check for zero size, check if the inner array is null.

2007-11-15  Jb Evain  <jbevain@novell.com>

	* LinkedList.cs: ifdef out manually the Serialization part of the
	LinkedList.Enumerator. As it is a struct, the field SerializationInfo
	have to be assigned in the default constructor, and the tuner cannot
	remove that. Fixes #341938 for real.

2007-10-09  Raja R Harinath  <rharinath@novell.com>

	* RBTree.cs (get_Item, do_remove): Remove redundant code.

2007-08-20  Jb Evain  <jbevain@novell.com>

	* SortedList.cs: don't crash in ListKeys and ListValues
	when CopyTo targets an empty array, and that the
	sorted list is empty. Fixes #82492.

2007-05-08  Raja R Harinath  <rharinath@novell.com>

	Avoid unnecessary allocation on indexer access
	* SortedDictionary.cs (NodeHelper): Rename from NodeComparer.
	(NodeHelper.CreateNode): New.
	(Item.set): Move responsibility of creating new nodes to
	RBTree.Intern.
	* RBTree.cs (INodeHelper): Rename from INodeComparer.
	(INodeHelper.CreateNode): New.
	(Intern): Use it to create a new node if no node is passed in.

2007-05-08 Igor Zelmanovich <igorz@mainsoft.com>

	* RBTree.cs: for TARGET_JVM used Thread Local Storage 
	istead Thread-Relative Static Fields 

2007-05-02  Raja R Harinath  <rharinath@novell.com>

	* RBTree.cs (Enumerator.Current): Remove nullref.

	* SortedDictionary.cs (ICollection.Contains): Use EqualityComparer
	for comparing the value field.

	* RBTree.cs (do_remove): Remove some redundant assignments/checks.
	(NodeEnumerator): Simplify.  Keep track of a list of
	right-pennants that need to be traversed next, rather than
	comparing parent pointers.
