@@ -110,6 +110,14 @@ namespace MonoTests.System.Collections.Generic {
 			Assert.AreEqual (10, x [0], "#1");
 			Assert.AreEqual (1, x [1], "#2");
 			Assert.AreEqual (2, x [2], "#3");
+			
+			z = new Queue <int> ();
+			x = new int [z.Count];
+			z.CopyTo (x, 0);
+			
+			ICollection c = new Queue <int> ();
+			x = new int [c.Count];
+			c.CopyTo (x, 0);
 		}
 
 		[Test]
